# mailgent-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
hivekey/: __init__.py  _errors.py  _http.py  client.py  supervisor_client.py  types.py
hivekey/resources/: calendar.py  did.py  identity.py  logs.py  mail.py  supervisor_identities.py  vault.py
loomal/: __init__.py  client.py  types.py
loomal/resources/: payments.py
mailgent/: __init__.py  _errors.py  _http.py  client.py  platform_client.py  types.py  webhook.py
mailgent/resources/: calendar.py  did.py  identity.py  logs.py  mail.py  payments.py  platform_identities.py  slack.py  social.py  supervisor_identities.py  vault.py
tests/: test_calendar.py  test_client.py  test_http.py  test_mail_rules.py  test_payments.py  test_platform.py  test_slack.py  test_social.py  test_supervisor.py  test_types.py  test_vault.py  test_webhook.py
