[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hivekey"
version = "0.2.0"
description = "Official Python SDK for the Hivekey API — identity infrastructure for AI agents"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]
license = "MIT"
keywords = ["hivekey", "ai", "agent", "email", "mcp", "did", "vault", "sdk"]

[project.urls]
Homepage = "https://hivekey.ai"
Documentation = "https://docs.hivekey.ai"
Repository = "https://github.com/hivekey-ai/python-sdk"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]
