[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loomal-sdk"
version = "0.5.0"
description = "Official Python SDK for the Loomal API — identity, mail, vault, calendar, and Loomal Pay (x402 paywall) for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Loomal" }]
keywords = [
    "loomal",
    "ai",
    "agent",
    "email",
    "mcp",
    "did",
    "vault",
    "sdk",
    "x402",
    "paywall",
    "usdc",
    "payments",
    "fastapi",
]
dependencies = ["httpx>=0.27"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://loomal.ai"
Documentation = "https://docs.loomal.ai"
Repository = "https://github.com/loomal-ai/loomal-python"
Issues = "https://github.com/loomal-ai/loomal-python/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "build", "twine", "fastapi>=0.110"]
fastapi = ["fastapi>=0.100"]

[tool.setuptools.packages.find]
include = ["loomal*"]
exclude = ["tests*"]
