[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailgent-sdk"
version = "0.7.1"
description = "Official Python SDK for the Mailgent API — identity, mail, vault, calendar, and buyer x402 payments for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mailgent" }]
keywords = [
    "mailgent",
    "ai",
    "agent",
    "email",
    "mcp",
    "did",
    "vault",
    "sdk",
    "x402",
    "usdc",
    "payments",
]
dependencies = ["httpx>=0.27"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://mailgent.dev"
Documentation = "https://docs.mailgent.dev"
Repository = "https://github.com/mailgent-dev/mailgent-python"
Issues = "https://github.com/mailgent-dev/mailgent-python/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "build", "twine"]

[tool.setuptools.packages.find]
include = ["mailgent*"]
exclude = ["tests*"]
